# applicationname-plasmoid

./: .gitignore  .mailmap  CMakeLists.txt  README  README.md  applicationname-plasmoid.qmlproject
package/: metadata.desktop
package/contents/config/: main.xml
package/contents/ui/: config.ui  main.qml
